Add dog management page with functionality to add, edit, and delete dogs